2006-09-19  matthieu nottale  <nottale@gostai.com>

	support cross-compile with mingw and distcheck progress

	* sdk/Makefile.am: remove -EXTRALDFLAGS, fix builddir/srcdir mistake.
	* sdk/umain.cc: fix usleep when compiling under WIN32 environment.
	* src/utils/Move.cpp: idem.
	* src/utils/Makefile.am: Fix builddir/srcdir mistake.
	* src/liburbi/uabstractclient.cpp: Fix parse error when hadnling brackets in system messages.
	* src/liburbi/Makefile.am: Fix builddir/srcdir mistake.
	* src/liburbi/uobject/Makefile.am: idem.
	* src/examples/urbiplay.cpp: Fix for WIN32 environnment.
	* src/examples/urbisendbin.cpp: idem.
	* src/examples/urbiping.cpp: idem.
	* src/examples/monitor-win.h: idem.
	* src/examples/Makefile.am: idem.
	* configure.ac: Add detection of windows.h and adding of ws2_32 and gdi32 libs.
	* doc/Makefile.am: Fix builddir/srcdir mistake.

2006-09-18  Akim Demaille  <akim@lrde.epita.fr>

	* src/liburbi/Makefile.am, src/liburbi/Doxyfile.in: Move do
	generation to...
	* doc/Makefile.am, doc/Doxyfile.in: here.
	Put it in srcdir.
	(install-data-local): New.
	* doc/Doxyfile.in (INPUT, FILE_PATTERNS): Complete.

	* src/examples/urbisound.cpp: Formatting changes.

2006-09-18  Akim Demaille  <akim@lrde.epita.fr>

	Improve Doxygenation.
	* src/liburbi/Doxyfile: Rename as...
	* src/liburbi/Doxyfile.in: this.
	(EXPAND_AS_DEFINED): Add the macros that should be expanded to
	get proper documentation generation.
	* configure.ac (DOXYGEN, DOCDIR): New.
	* src/librubi/Makefile.am ($(DOCDIR)): New target.

	* src/liburbi/uconversion.cpp: Do not use relative paths.
	Use the anonymous namespace instead of "static".
	* src/liburbi/uconversion.h, src/liburbi/lockable.h: Formatting
	changes.
	* src/liburbi/Makefile.am (AM_CPPFLAGS): Point to lib/, not
	lib/jpeg-6.
	* src/liburbi/uabstractclient.h: Formatting changes.

2006-09-15  Matthieu Nottale <nottale@gostai.com>

	* src/liburbi/uobject/common_uvalue.cc : Fix missing space in
	getMessage().