@@ -1,3 +1,7 @@
+2006-09-21  Akim Demaille  <akim@lrde.epita.fr>
+
+	* src/examples/urbiping.cpp: Formatting changes.
+
 2006-09-19  matthieu nottale  <nottale@gostai.com>
 
 	support cross-compile with mingw and distcheck progress
